# ZeroCopyRpc

./: .gitignore  .gitmodules  README.md
NativeRpc/: CMakeLists.txt  CMakePresets.json  Reame.md
NativeRpc/NativeRpc/: CMakeLists.txt  NativeRpc.cpp  NativeRpc.h
NativeRpc/ZeroCopyRpc/: CMakeLists.txt  ConcurrentBag.hpp  ConcurrentDictionary.hpp  CrossPlatform.cpp  CrossPlatform.h  CyclicBuffer.hpp  CyclicMemoryPool.hpp  Export.h  FastBitSet.h  IDPool.hpp  ISharedMemoryClient.h  Messages.h  NamedSemaphore.cpp  NamedSemaphore.h  NativeRpc.cpp  NativeRpc.h  PeriodicTimer.cpp  PeriodicTimer.h  ProcessUtils.cpp  ProcessUtils.h  Program.cpp  Random.cpp  Random.h  SharedMemoryClient.cpp  SharedMemoryClient.h  SharedMemoryServer.cpp  SharedMemoryServer.h  ShmReplicator.cpp  ShmReplicator.h  StopWatch.cpp  StopWatch.h  TcpReplicator.cpp  TcpReplicator.h  TestFrame.cpp  TestFrame.h  ThreadSpin.cpp  ThreadSpin.h  TypeDefs.cpp  TypeDefs.h  UdpFrameDefragmentator.h  (+8 more)
NativeRpc/tests/: BigFrame.hpp  CMakeLists.txt  ComputeHash.cpp  ComputeHash.h  ConcurrentBugTests.cpp  ConcurrentDictionaryTests.cpp  CyclicBufferTests.cpp  CyclicMemoryPoolTests.cpp  FastBitSetTests.cpp  IDPoolTests.cpp  NamedSemaphoreTests.cpp  ReplicationTests.cpp  SharedMemoryServerTests.cpp  SpinWaitTests.cpp  StopWatchTests.cpp  SyncLatencyTest.cpp  ThreadSpinTests.cpp  UdpFrameDefragmentatorPerfTest.cpp  UdpFrameDefragmentatorTests.cpp  UdpFrameIteratorTests.cpp  test_main.cpp
